Envio do Swagger configurado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 spring.application.name=BibliotecaJpa
 
-info.app.description=@project.description@
-info.app.encoding=@project.build.sourceEncoding@
-info.build.artifact=@project.artifactId@
-info.build.group=@project.groupId@
-info.build.name=@project.name@
-info.build.version=@project.version@
+info.build.name=Biblioteca JPA API
+info.build.version=0.0.1-SNAPSHOT
+info.app.description=API para gerenciamento de uma biblioteca utilizando Spring Boot, JPA e PostgreSQL.
 
 ################# PostgreSQL #################
 spring.datasource.url=jdbc:postgresql://localhost:5433/jpa
